--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:low-memory": "node --max-old-space-size=1024 node_modules/.bin/vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "pm2 start ecosystem.config.js",
+    "start": "pm2 start ecosystem.config.cjs",
     "stop": "pm2 stop zionary-prime-launch",
     "restart": "pm2 restart zionary-prime-launch",
     "delete": "pm2 delete zionary-prime-launch",
@@ -20,7 +20,7 @@
     "monitor:stop": "./scripts/auto-restart.sh stop",
     "monitor:restart": "./scripts/auto-restart.sh restart",
     "status": "pm2 status",
-    "setup:prod": "npm install && npm run build && pm2 start ecosystem.config.js --env production && npm run monitor"
+    "setup:prod": "npm install && npm run build && pm2 start ecosystem.config.cjs --env production && npm run monitor"
   },
   "dependencies": {
     "@fluentui/react-icons": "^2.0.311",
